grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => prec(PRECEDENCE.LOWEST, choice(
      $.package_statement,

      $.use_no_statement,
      $.use_no_if_statement,
      $.bareword_import,
      $.use_no_subs_statement,
      $.use_no_feature_statement,
      $.use_no_version,
      $.require_statement,

      $.use_constant_statement,

      $.use_parent_statement,

      $._expression_statement,

      $._declaration,

      $.single_line_statement,

      $._compound_statement,

      $.standalone_block,
      $.named_block_statement,

      $.ellipsis_statement,
      $.special_block,

      $.special_literal,

      $.heredoc_body_statement,

      $.pod_statement,
    )),

    // pseudocode
    // ------------
    // have start identifier as external. then parse till end of line
    // then \n, then start hereodc body.
    variable_declaration: $ => prec.left(seq(
      $.scope,
      // multi declaration
      // or single declaration without brackets
      choice(
        $.multi_var_declaration, 
        field('name', $._variables),
      ),
      optional($._initializer),
    )),

    _initializer: $ => seq(
      '=',
      field('value', $._expression),
    ),
    
    scope: $ => prec.right(choice(
      'our',
      'state',
      'my',
      'local',
    )),

    // why perl, why!
    function_definition: $ => prec.left(seq(
      optional($.scope),
      'sub',
      field('name', $.identifier),
      choice(
        seq(
          optional($.function_prototype),
          optional($.function_attribute),
          choice(
            $.semi_colon,
            field('body', $.block),
          ),
        ),
        seq(
          $.function_prototype,
          optional($._function_signature),
          choice(
            $.semi_colon,
            field('body', $.block),
          ),
        ),
        seq(
          optional($.function_prototype),
          $._function_signature,
          choice(
            $.semi_colon,
            field('body', $.block),
          ),
        ),
        seq(
          ':', 'prototype',
          $.function_prototype,
          $._function_signature,
          choice(
            $.semi_colon,
            field('body', $.block),
          ),
        ),
      )
    )),

    anonymous_function: $ => seq(
      'sub',
      $.block,
    ),

    block: $ => prec.left(PRECEDENCE.TERM, seq(
      '{',
      optional(repeat($._block_statements)),
      '}',
      // optional($.semi_colon), // TODO: make semi_colon just appear anywhere
    )),

    _function_signature: $ => alias($.array, $.function_signature),

    function_prototype: $ => prec(PRECEDENCE.TERM, seq(
      '(',
      optional($.prototype),
      ')',
    )),
    prototype: $ => /[&$@%;*\[\]\\]+/, // (\[$@%;&*])
 
    // sub test2 : Path('/') Args(0) {}
    // colon and space are separators
    // basically they are :call_expressions()
    _block_statements: $ => choice(
      $._statement,
      commaSeparated($, $._expression),
      seq($.return_expression, $.semi_colon),
      $.loop_control_statement,
    ),

    _expression: $ => prec(PRECEDENCE.LOWEST, commaSeparated($, choice(
      $._expression_without_call_expression,

      $.call_expression,
      $.call_expression_with_bareword,
      $.call_expression_recursive,
      $.method_invocation,

      // quote-like operators
      $.command_qx_quoted,
      $.backtick_quoted,
      $.patter_matcher_m,
      $.regex_pattern_qr,
      $.substitution_pattern_s,
      $.transliteration_tr_or_y,
      $.heredoc_initializer,
      $.pattern_matcher,

      $._i_o_operator,

      $.anonymous_function,

      // object oriented stuffs
      $.bless,

      // $.grep_or_map_function,
      // $.join_function,
      // $.sort_function,
      // $.unpack_function,

      // $.push_function,

      $.array_function,

      $.variable_declaration,

      $.key_words_in_hash_key,

      // $.key_value_pair,
    ))),

    binary_expression: $ => choice(
      $._exponentiation,
      $._binding_expression,
      $._bodmas_1,
      $._bodmas_2,
      $._shift_expression,
      $._relational_expression,
      $._equality_expression,
      $._class_instance_exp,
      $._bitwise_and_exp,
      $._bitwise_or_xor_exp,
      $._logical_and_exp,
      $._logical_ors_exp,
      $._range_exp,
      $._assignment_exp,
      $._logical_verbal_or_xor,
    ),

    _exponentiation: $ => prec.right(PRECEDENCE.EXPONENTIATION, seq(
      field('variable', $._expression),
      field('operator', '**'),
      field('variable', $._expression),
    )),

    _binding_expression: $ => prec.left(PRECEDENCE.BINDING_OPERATORS, choice(
      seq(
        field('variable', $._expression),
        field('operator', '=~'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '!~'),
        field('variable', $._expression),
      ),
    )),

    _bodmas_1: $ => prec.left(PRECEDENCE.BODMAS_1, choice(
      seq(
        field('variable', $._expression),
        field('operator', '*'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '/'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '%'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', 'x'),
        field('variable', $._expression),
      ),
    )),

    _bodmas_2: $ => prec.left(PRECEDENCE.BODMAS_2, choice(
      seq(
        field('variable', $._expression),
        field('operator', '+'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '-'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '.'),
        field('variable', $._expression),
      ),
    )),

    _shift_expression: $ => prec.left(PRECEDENCE.SHIFT_OPERATORS, choice(
      seq(
        field('variable', $._expression),
        field('operator', '<<'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '>>'),
        field('variable', $._expression),
      ),
    )),

    // has chaining. example: $a > $b > $c
    _relational_expression: $ => prec.left(PRECEDENCE.RELATIONAL_OPERATORS, seq(
      field('variable', $._expression),
      repeat1(seq(
        choice(
          '<',
          '>',
          '<=',
          '>=',
          'lt',
          'gt',
          'le',
          'ge',
        ),
        $._expression,
      ))
    )),

    // first few has chaining
    _equality_expression: $ => prec.left(PRECEDENCE.EQUALITY_OPERATORS, choice(
      seq(
        field('variable', $._expression),
        repeat1(seq(
          choice(
            '==',
            '!=',
            'eq',
            'ne',
          ),
          $._expression,
        ))
      ),
      seq(
        field('variable', $._expression),
        field('operator', '<=>'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', 'cmp'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '~~'),
        field('variable', $._expression),
      ),
    )),

    _class_instance_exp: $ => prec(PRECEDENCE.ISA_OPERATOR, seq(
      field('variable', $._expression),
      field('operator', 'isa'),
      field('variable', $._expression),
    )),

    _bitwise_and_exp: $ => prec.left(PRECEDENCE.BITWISE_AND, seq(
      field('variable', $._expression),
      field('operator', '&'),
      field('variable', $._expression),
    )),

    _bitwise_or_xor_exp: $ => prec.left(PRECEDENCE.BITWISE_OR_XOR, choice(
      seq(
        field('variable', $._expression),
        field('operator', '|'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '^'),
        field('variable', $._expression),
      ),
    )),

    _logical_and_exp: $ => prec.left(PRECEDENCE.LOGICAL_AND, seq(
      field('variable', $._expression),
      field('operator', '&&'),
      field('variable', $._expression),
    )),

    _logical_ors_exp: $ => prec.left(PRECEDENCE.LOGICAL_ORS, choice(
      seq(
        field('variable', $._expression),
        field('operator', '||'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '//'),
        field('variable', $._expression),
      ),
    )),

    _range_exp: $ => prec(PRECEDENCE.RANGE_OPERATOR, choice(
      seq(
        field('variable', $._expression),
        field('operator', '..'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', '...'),
        field('variable', $._expression),
      ),
    )),

    // **=    +=    *=    &=    &.=    <<=    &&=
    //    -=    /=    |=    |.=    >>=    ||=
    //    .=    %=    ^=    ^.=           //=
    //          x=
    _assignment_exp: $ => prec.right(PRECEDENCE.ASSIGNMENT_OPERATORS, choice(
      ...[
        '=',
        '**=',
        '+=',
        '*=',
        '&=',
        '&.=',
        '<<=',
        '&&=',
        '-=',
        '/=',      
        '|=',
        '|.=',
        '>>=',
        '||=',
        '.=',
        '%=',
        '^=',
        '^.=',
        '//=',
        'X=',
      ].map((operator) => 
        seq(
          field('variable', $._expression),
          field('operator', operator),
          field('variable', $._expression),
        ),
      )
    )),

    _logical_verbal_or_xor: $ => prec.left(PRECEDENCE.OR_XOR, choice(
      seq(
        field('variable', $._expression),
        field('operator', 'or'),
        field('variable', $._expression),
      ),
      seq(
        field('variable', $._expression),
        field('operator', 'xor'),
        field('variable', $._expression),
      )
    )),

    // end of operators

    call_expression: $ => prec.left(PRECEDENCE.TERM, seq(
      optional(token.immediate('&')),
      optional(seq(
        field('package_name', $.package_name),
        token.immediate('::'),
      )),
      field('function_name', choice(
        getInBuiltFunctionNames(),
        $.identifier,
      )),
      field('args', choice($.parenthesized_argument, $.arguments)),
    )),

    method_invocation: $ => prec.left(PRECEDENCE.TERM, seq(
      choice(
        field('package_name', choice($.identifier, $.package_name, $.string_single_quoted)),
        field('object', $.scalar_variable),
        field('object_return_value', $._expression),
      ),
      prec.right(repeat1(
        seq(
          $.arrow_operator,
          choice(
            seq(
              optional(seq($.super, token.immediate('::'))),
              field('function_name', $.identifier)
            ),
            $.special_scalar_variable,
            $.scalar_variable,
            $.scalar_dereference,
            $.parenthesized_argument, // for passing it to the previous item in the chain
          ),
          // anything with bracket is higher precedence.
          // so args without brackets is lower precedence.
          optional(field('args', choice($.parenthesized_argument, $.arguments))), // TODO: make this optional and fix errors
        ),
      ),
    ))),

    parenthesized_argument: $ => prec(PRECEDENCE.TERM, seq(
      '(',
      optional($.arguments),
      ')',
    )),

    arguments: $ => prec.right(PRECEDENCE.COMMA_OPERATORS,
      commaSeparated($, $._expression),
    ),

    _variables: $ => prec(PRECEDENCE.ARRAY, choice(
      $.scalar_variable,
      $.special_scalar_variable,
      $.package_variable,
      $.array_variable,
      $.hash_variable,
    )),

    identifier: $ => /[a-zA-Z0-9_]+/,
    // bareword: $ => /[a-zA-Z0-9_$]+/,

    // any characters or just bareword(s) and variables
    package_name: $ => choice(
      $.identifier,
      seq(
        $.identifier,
        repeat1(seq(
          token.immediate('::'),
          $.identifier,
        )),
      ),
      // /[A-Z_a-z][0-9A-Z_a-z]*(?:::[0-9A-Z_a-z]+)*/,
      // /\$[0-9A-Z_a-z]*(?:::[0-9A-Z_a-z]+)*/, // TODO fix this
      // /\*[0-9A-Z_a-z]*(?:::[0-9A-Z_a-z]+)*/, // type glob stuff
      // TODO: put in other package name structures
    ),

    string_single_quoted: $ => prec(PRECEDENCE.TERM, seq(
      "'",
      repeat($._string_single_quoted_content),
      "'",
    )),
    // TODO change all + to * in regex
    // NOTE/TODO:
    // we are currently only supporting {, /, (, \ as delimiters
    // in future release should use external scanners for delimiters
    string_double_quoted: $ => prec(PRECEDENCE.TERM, seq(
      '"',
      repeat(choice($.interpolation, $.escape_sequence, $._string_double_quoted_content)),
      '"',
    )),
    scalar_variable: $ => prec(PRECEDENCE.TERM, seq(
      '$', with_or_without_curly_brackets($._scalar_variable_external)
    )),

    hash_access_variable: $ => prec(PRECEDENCE.HASH, seq(
      field('hash_variable',  $._expression),
      repeat1(
        seq(
          choice(
            token.immediate('->{'),
            token.immediate('{'),
          ),
          field('key', choice(
            alias($.identifier, $.bareword),
            alias($.key_words_in_hash_key, $.bareword),
            $._expression,
          )),
          '}',
        )
      ),
    )),

    hash_ref: $ => prec(PRECEDENCE.HASH, seq(
      optional('+'), // to make into a hash_ref rather than a block
      '{',
      optional(commaSeparated($, $._expression)),
      '}'
    )),

    // refer - https://perldoc.perl.org/perlref
    hash_dereference: $ => prec.left(PRECEDENCE.TERM ,seq(
      '%',
      with_or_without_curly_brackets($._expression),
    )),

    // cat => 'meow', meta => {}
    // key_value_pair: $ => prec.left(PRECEDENCE.COMMA_OPERATORS, seq(
    //   field('key', choice(
    //     alias($.identifier, $.bareword),
    //     alias($.key_words_in_hash_key, $.bareword),
    //     $.variable_declaration,
    //     $._expression,
    //   )),
    //   prec.right(seq(
    //     $.hash_arrow_operator,
    //     field('value', $._expression),
    //   )),
    // )),

    // NOTE: this is a hack for keys that are keywords
    arrow_operator: $ => prec.left(PRECEDENCE.ARROW_OPERATOR, '->'),
