test/corpus/comments.txt
=================================================
single line comment
=================================================

# I'm a comment and I can be anywhere

---

(source_file
  (comments)
)

=================================================
a pound (#) inside a string is a string and not a comment
=================================================

my $string = "This is a string with # in it";

---

(source_file
  (binary_expression (variable_declaration (scope) (scalar_variable)) (string_double_quoted)) 
)
