test/corpus/module.txt
=================================================
method invocation 1
=================================================

my $output = BaseModule::YeaThis->hello('first', {
  hello => 'beautiful'
});

---

(source_file
  (variable_declaration (scope) (single_var_declaration (scalar_variable))
  (method_invocation (package_name (identifier) (identifier)) (arrow_operator) (identifier)
    (parenthesized_argument (argument (string_single_quoted) (hash_ref (bareword) (hash_arrow_operator) (string_single_quoted)))))
  )
)

=================================================
method invocation 2
=================================================

my $output = BaseModule->new();

---

(source_file
  (variable_declaration (scope) (single_var_declaration (scalar_variable))
  (method_invocation (identifier) (arrow_operator) (identifier) (empty_parenthesized_argument)) )
)
