test/corpus/variables.txt
=================================================
special variable with local scope
=================================================

local $SIG{__WARN__} = sub {};

---

(source_file
    (binary_expression
    (hash_access_variable (variable_declaration
            (scope)
            (scalar_variable)) (bareword)) (anonymous_function (block))) )
